<?xml version="1.0" encoding="utf-8"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_trees_js</name>
  <version>0.6.4</version>
  <description>
    Javascript library for visualising behaviour trees.
  </description>

  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <author>Daniel Stonier</author>

  <license>BSD</license>

  <url type="website">https://github.com/splintered-treality/py_trees_js</url>
  <url type="repository">https://github.com/splintered-treality/py_trees_js</url>
  <url type="bugtracker">https://github.com/splintered-treality/py_trees_js/issues</url>

  <build_depend>python3-setuptools</build_depend>
  <build_depend>pyqt5-dev-tools</build_depend>
  <build_depend>qttools5-dev-tools</build_depend>

  <exec_depend>python3-qt5-bindings</exec_depend>
  <exec_depend>python3-pyqt5.qtwebengine</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
